Fix alignment of top three articles in tablet version

--- a/style.css
+++ b/style.css
@@ -792,11 +792,9 @@
   }
 
   .img_2 {
-    margin-top: 15%;
-    padding-top: 17px;
-    padding-bottom: 0;
+    margin-top: 20%;
     margin-bottom: 0;
-  }
+  } 
 
   .pic_logo {
     display: none;
